--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <version>2.2.3.RELEASE</version>
         </dependency>
 
+        <!-- logstash -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>6.3</version>
+        </dependency>
+
 
 
     </dependencies>
