--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,21 @@
 server:
-  port: 30030
+  port: 8000
 
 eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://127.0.0.1:30090/eureka
+      defaultZone: http://localhost:8761/eureka
+  preferSameZone: false
+  shouldUseDns: false
+  shouldOnDemandUpdateStatusChange: true
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
+    prefer-ip-address: true
+    ip-address: localhost
+    instance-id: ${spring.application.name}:${random.value}:${server.port}
 
 
 management:
@@ -394,4 +403,9 @@ spring:
     port: 6379
     password: joyjoy1886*
 
+
+logging:
+  config: classpath:logback-spring.xml
+  level:
+    org.springframework.security: INFO
 
